--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,9 @@
 body{
     color: white !important;
+    font-family: 'Major Mono Display', monospace; !important;
 }
 
 #quizArea, #title{
     background-blend-mode: "soft-light";
     background-color: #ffffff7d;
 }
-
-
-.css("height", "100vh")
-        // .css("margin", "0")
-        // .css("background-size", "cover")
-        // .css("background-blend-mode", "soft-light")
-        // .css("background-color", "#ffffff7d")
-        // .css("z-index", "-1")
-        // .css("margin", "0")
-        // .css("background-repeat", "no-repeat");
